@@ -10,6 +10,7 @@ import org.springframework.web.bind.annotation.*;
 import co.edu.uco.FondaControl.businesslogic.facade.CategoriaFacade;
 import co.edu.uco.FondaControl.crosscutting.excepciones.FondaControlException;
 import co.edu.uco.FondaControl.dto.CategoriaDTO;
+import co.edu.uco.FondaControl.dto.VentaDTO;
 
 @RestController
 @RequestMapping("/api/v1/categorias")
@@ -19,6 +20,11 @@ public class CategoriaController {
 
     public CategoriaController(CategoriaFacade categoriaFacade) {
         this.categoriaFacade = categoriaFacade;
+    }
+    
+    @GetMapping("/dummy")
+    public CategoriaDTO dummy() {
+        return new CategoriaDTO();
     }
 
     @GetMapping
@@ -65,7 +71,7 @@ public class CategoriaController {
             );
         }
 
-        String nombre = encontrados.getFirst().getNombre();
+        String nombre = encontrados.get(0).getNombre();
 
         CategoriaDTO aEliminar = new CategoriaDTO();
         aEliminar.setCodigo(id);
@@ -75,15 +81,12 @@ public class CategoriaController {
         return ResponseEntity.ok(mensaje);
     }
 
-    // Nuevo endpoint: consultarCategoriaPorCodigo (según el facade, es void)
-    @GetMapping("/{id}/exists")
+    @GetMapping("/{id}")
     @ResponseStatus(HttpStatus.NO_CONTENT)
-    public void consultarPorCodigo(@PathVariable("id") UUID id)
-            throws FondaControlException {
+    public void consultarPorCodigo(@PathVariable("id") UUID id) throws FondaControlException {
         CategoriaDTO consulta = new CategoriaDTO();
         consulta.setCodigo(id);
         categoriaFacade.consultarCategoriaPorCodigo(consulta);
-        // Si no existe, lanza excepción y retorna 404 por manejo global o por @ExceptionHandler.
-        // Si existe, retorna 204 No Content.
+       
     }
 }
